--- a/style.css
+++ b/style.css
@@ -27,11 +27,13 @@
     margin-top: 2em;
     height: 2.5em;
   }
+  
   .container {
     font-size: 16px;
     width: 90vw;
     max-width: 37.5em;
-    padding: 3em 1.8em;
+    padding: 3em 0.5em;
+    /* padding-right: 1em; */
     background-color: #201f28;
     position: absolute;
     transform: translate(-50%, -50%);
@@ -42,21 +44,29 @@
   }
   .scontainer {
     display: grid;
-    grid-template-columns: 9fr 3fr;
+    /* grid-template-columns:9fr 3fr; */
     gap: 1.2em;
+
   }
   .scontainer input,
   .scontainer button {
+ 
     font-size: 0.9em;
     outline: none;
     border-radius: 0.3em;
   }
+  /* #btn{
+      width: auto; 
+    } */
+  
   .scontainer input {
     background-color: transparent;
     border: 1px solid #a0a0a0;
-    padding: 0.7em;
+    padding: 0.7em 0.7em;
     color: #ffffff;
+    width: 100%;
   }
+
   .scontainer input:focus {
     border-color: #ffffff;
   }
@@ -65,6 +75,9 @@
     border: none;
     cursor: pointer;
     color: white;
+    width: 100%;
+    padding: 0.7em 0.7em;
+
   }
   .scontainer button:hover{
     background-color: #ffffff;
@@ -155,3 +168,11 @@ h2 {
         font-size: 1em;
     }
   }
+  /* @media screen and (max-width: 450px) {
+    .search-container {
+      display: grid;
+      gap: 1.2em;
+      .search-container input{
+        width: 70%;
+      }
+  }} */
